apps/base/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`homepage-new.cruznet.io`)
    kind: Rule
    services:
    - name: homepage
      kind: Service
      port: 3000
  tls:
    secretName: homepage-cert
